logs/BlossomV_0.5.log
>>> 'Pkg.add("BlossomV")' log
INFO: Cloning cache of BlossomV from https://github.com/mlewe/BlossomV.jl.git
INFO: Installing BinDeps v0.4.2
INFO: Installing BlossomV v0.0.3
INFO: Installing SHA v0.2.0
INFO: Installing URIParser v0.1.5
INFO: Building BlossomV
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps/downloads
INFO: Downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.05.src.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0  0     0    0     0    0     0      0      0 --:--:--  0:00:02 --:--:--     0  0     0    0     0    0     0      0      0 --:--:--  0:00:03 --:--:--     0 63 47922   63 30574    0     0   7973      0  0:00:06  0:00:03  0:00:03  7974100 47922  100 47922    0     0  12170      0  0:00:03  0:00:03 --:--:-- 12169
INFO: Done downloading file http://pub.ist.ac.at/~vnk/software/blossom5-v2.05.src.tar.gz
WARNING: readbytes is deprecated, use read instead.
 in depwarn(::String, ::Symbol) at ./deprecated.jl:64
 in readbytes(::IOStream, ::Vararg{IOStream,N}) at ./deprecated.jl:30
 in sha256(::IOStream) at /home/vagrant/.julia/v0.5/SHA/src/SHA.jl:54
 in (::BinDeps.##67#68{String,String})(::IOStream) at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:1036
 in open(::BinDeps.##67#68{String,String}, ::String) at ./iostream.jl:113
 in run(::BinDeps.##19#20{BinDeps.ChecksumValidator}) at /home/vagrant/.julia/v0.5/BinDeps/src/BinDeps.jl:445
 in run(::BinDeps.SynchronousStepCollection) at /home/vagrant/.julia/v0.5/BinDeps/src/BinDeps.jl:488 (repeats 2 times)
 in satisfy!(::BinDeps.LibraryDependency, ::Array{DataType,1}) at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:803
 in satisfy!(::BinDeps.LibraryDependency) at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:781
 in macro expansion; at /home/vagrant/.julia/v0.5/BinDeps/src/dependencies.jl:836 [inlined]
 in anonymous at ./<missing>:?
 in include_from_node1(::String) at ./loading.jl:426
 in evalfile(::String, ::Array{String,1}) at ./loading.jl:442 (repeats 2 times)
 in cd(::##2#4, ::String) at ./file.jl:59
 in (::##1#3)(::IOStream) at ./none:13
 in open(::##1#3, ::String, ::String) at ./iostream.jl:113
 in eval(::Module, ::Any) at ./boot.jl:234
 in process_options(::Base.JLOptions) at ./client.jl:239
 in _start() at ./client.jl:318
while loading /home/vagrant/.julia/v0.5/BlossomV/deps/build.jl, in expression starting on line 28
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps/src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps
INFO: Directory /home/vagrant/.julia/v0.5/BlossomV/deps already created
INFO: Changing Directory to /home/vagrant/.julia/v0.5/BlossomV/deps/src/blossom5-v2.05.src
INFO: Attempting to Create directory /home/vagrant/.julia/v0.5/BlossomV/deps/usr/lib
patching file Makefile
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  example.cpp -c -o example.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  interface.cpp -c -o interface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  misc.cpp -c -o misc.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMduals.cpp -c -o PMduals.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMexpand.cpp -c -o PMexpand.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinit.cpp -c -o PMinit.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMinterface.cpp -c -o PMinterface.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMmain.cpp -c -o PMmain.o
interface.cpp: In function ‘matching* matching_construct(int32_t, int32_t)’:
interface.cpp:25:14: error: ‘make_unique’ is not a member of ‘std’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
              ^
interface.cpp:25:39: error: expected primary-expression before ‘>’ token
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                       ^
interface.cpp:25:65: error: request for member ‘release’ in ‘(0, edge_num_max)’, which is of non-class type ‘int32_t {aka int}’
     result = std::make_unique<matching>(node_num, edge_num_max).release();
                                                                 ^
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMrepair.cpp -c -o PMrepair.o
g++ -O3 -D_NDEBUG -fPIC -fvisibility=hidden -std=c++1y  PMshrink.cpp -c -o PMshrink.o
make: *** [interface.o] Error 1
make: *** Waiting for unfinished jobs....
==============================[ ERROR: BlossomV ]===============================

LoadError: failed process: Process(setenv(`make -j8 all`,String["PYTHON=","PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/","PWD=/vagrant/0.5AL","SHELL=/bin/bash","SSH_CONNECTION=10.0.2.2 60246 10.0.2.15 22","LD_LIBRARY_PATH=:/usr/local/lib/","MAIL=/var/mail/vagrant","LANG=en_US.UTF-8","SHLVL=3","LOGNAME=vagrant","XDG_RUNTIME_DIR=/run/user/1000","XDG_SESSION_ID=3","OLDPWD=/home/vagrant","SSH_CLIENT=10.0.2.2 60246 22","_=/usr/bin/timeout","USER=vagrant","TERM=vt100","HOME=/home/vagrant","OPENBLAS_MAIN_FREE=1","JAVA_HOME=/usr/lib/jvm/java-7-oracle"]), ProcessExited(2)) [2]
while loading /home/vagrant/.julia/v0.5/BlossomV/deps/build.jl, in expression starting on line 28

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: BlossomV had build errors.

 - packages with build errors remain installed in /home/vagrant/.julia/v0.5
 - build the package(s) and all dependencies with `Pkg.build("BlossomV")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated

>>> 'Pkg.test("BlossomV")' log
Julia Version 0.5.0-rc1+0
Commit cede539 (2016-08-04 08:48 UTC)
Platform Info:
  System: Linux (x86_64-unknown-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz
  WORD_SIZE: 64
           Ubuntu 14.04.5 LTS
  uname: Linux 3.13.0-92-generic #139-Ubuntu SMP Tue Jun 28 20:42:26 UTC 2016 x86_64 x86_64
Memory: 2.4471054077148438 GB (1768.25 MB free)
Uptime: 6057.0 sec
Load Avg:  0.92919921875  1.0  1.037109375
Intel(R) Xeon(R) CPU E3-1241 v3 @ 3.50GHz: 
       speed         user         nice          sys         idle          irq
#1  3499 MHz     300875 s         90 s      47258 s     169845 s         11 s
#2  3499 MHz      89236 s         44 s      27778 s     462722 s          0 s

  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Nehalem)
  LAPACK: libopenblas64_
  LIBM: libopenlibm
  LLVM: libLLVM-3.7.1 (ORCJIT, haswell)
Environment:
  TERM = vt100
  LD_LIBRARY_PATH = :/usr/local/lib/
  PATH = /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/home/vagrant/julia/bin/
  JAVA_HOME = /usr/lib/jvm/java-7-oracle
  HOME = /home/vagrant

Package Directory: /home/vagrant/.julia/v0.5
2 required packages:
 - BlossomV                      0.0.3
 - JSON                          0.6.0
4 additional packages:
 - BinDeps                       0.4.2
 - Compat                        0.8.6
 - SHA                           0.2.0
 - URIParser                     0.1.5
INFO: Testing BlossomV
ERROR: LoadError: LoadError: BlossomV not properly installed. Please run Pkg.build("BlossomV")
 in error(::String) at ./error.jl:21
 in include_from_node1(::String) at ./loading.jl:426
 in eval(::Module, ::Any) at ./boot.jl:234
 in require(::Symbol) at ./loading.jl:357
 in include_from_node1(::String) at ./loading.jl:426
 in process_options(::Base.JLOptions) at ./client.jl:262
 in _start() at ./client.jl:318
while loading /home/vagrant/.julia/v0.5/BlossomV/src/BlossomV.jl, in expression starting on line 6
while loading /home/vagrant/.julia/v0.5/BlossomV/test/runtests.jl, in expression starting on line 1
==============================[ ERROR: BlossomV ]===============================

failed process: Process(`/home/vagrant/julia/bin/julia -Cx86-64 -J/home/vagrant/julia/lib/julia/sys.so --compile=yes --depwarn=yes --check-bounds=yes --code-coverage=none --color=no --compilecache=yes /home/vagrant/.julia/v0.5/BlossomV/test/runtests.jl`, ProcessExited(1)) [1]

================================================================================
ERROR: BlossomV had test errors
 in #test#61(::Bool, ::Function, ::Array{AbstractString,1}) at ./pkg/entry.jl:740
 in (::Base.Pkg.Entry.#kw##test)(::Array{Any,1}, ::Base.Pkg.Entry.#test, ::Array{AbstractString,1}) at ./<missing>:0
 in (::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}})() at ./pkg/dir.jl:31
 in cd(::Base.Pkg.Dir.##2#3{Array{Any,1},Base.Pkg.Entry.#test,Tuple{Array{AbstractString,1}}}, ::String) at ./file.jl:59
 in #cd#1(::Array{Any,1}, ::Function, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N}) at ./pkg/dir.jl:31
 in (::Base.Pkg.Dir.#kw##cd)(::Array{Any,1}, ::Base.Pkg.Dir.#cd, ::Function, ::Array{AbstractString,1}, ::Vararg{Array{AbstractString,1},N}) at ./<missing>:0
 in #test#3(::Bool, ::Function, ::String, ::Vararg{String,N}) at ./pkg/pkg.jl:258
 in test(::String, ::Vararg{String,N}) at ./pkg/pkg.jl:258
 in eval(::Module, ::Any) at ./boot.jl:234
 in process_options(::Base.JLOptions) at ./client.jl:239
 in _start() at ./client.jl:318

>>> End of log
